fix:make full sync works!!
Signed-off-by: grapebaba <281165273@qq.com>